--- a/css/HP.css
+++ b/css/HP.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./PencilOS_DesktopImg.png");
+    background-image: url("img/PencilOS_DesktopImg.png");
     padding-top: 30px;
     padding-bottom: 20px;
 }
